ingrees/grpc-gateway-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: grpc-gateway-ingress
spec:
  rules:
    - host: gateway
      http:
        paths:
          - backend:
              serviceName: gateway
              servicePort: grpc
