ingrees/grpc-user-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: grpc-user-ingress
spec:
  rules:
    - host: user
      http:
        paths:
          - backend:
              serviceName: user
              servicePort: grpc
